src/objects/Litigation_Notes__c.object
<CustomObject>
    <description>AVB Custom Object - This object shows as a related list under the Litigation Activies object.  The purpose of this object is to update the status of the Litigation Activity and add Notes\comments.</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Litigation_Activity__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Litigation_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation Activity</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipName>R00N60000001Wi0MEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigation_Notes__c</fullName>
        <label>Litigation Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attorney confirmed cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney confirmed filed with court</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney confirmed NTQ served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autocreated Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Called Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Paid in Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Partial Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Sent in error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Skipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled/Vacated/Moved Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consent Judgement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversation with Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversation with Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Judgment entered/Received Judgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emailed Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evicted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Important Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgement Absolute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgment Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judgment Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Fees Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuisance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Court Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Eviction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Lock Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Warrant/Warrant Filed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior Resident</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Litigation Note</label>
    <nameField>
        <displayFormat>Note-{0}</displayFormat>
        <label>Litigation Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Litigation Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>